--- a/foodie-app/package.json
+++ b/foodie-app/package.json
@@ -9,8 +9,11 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-elastic-carousel": "^0.6.7",
+    "react-places-autocomplete": "^7.3.0",
     "react-scripts": "3.4.1",
-    "react-typical": "^0.1.3"
+    "react-typical": "^0.1.3",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
