--- a/foodie-app/package.json
+++ b/foodie-app/package.json
@@ -9,16 +9,19 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
+    "classnames": "^2.2.6",
     "firebase": "^7.17.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^16.13.1",
     "react-elastic-carousel": "^0.6.7",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
+    "react-stripe-checkout": "^2.6.3",
     "react-typical": "^0.1.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
